<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewResultado"
                android:layout_column="0"
                android:layout_span="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewSigno"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewOperacion"
                android:layout_column="0"
                android:layout_span="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonSuma"
                android:id="@+id/buttonSuma"
                android:onClick="eventoBtnSum"
                android:layout_column="0" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonRest"
                android:id="@+id/buttonResta"
                android:onClick="eventoBtnRes"
                android:layout_column="1" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonC"
                android:id="@+id/buttonC"
                android:onClick="eventoBtnC"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonDiv"
                android:id="@+id/buttonDiv"
                android:onClick="eventoBtnDiv"
                android:layout_column="0" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonMult"
                android:id="@+id/buttonMult"
                android:onClick="eventoBtnMul"
                android:layout_column="1" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonCE"
                android:id="@+id/buttonCE"
                android:onClick="eventoBtnCE"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton7"
                android:id="@+id/buttonNum7"
                android:onClick="eventoBtn7"
                android:layout_column="0" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton8"
                android:id="@+id/buttonNum8"
                android:onClick="eventoBtn8"
                android:layout_column="1" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton9"
                android:id="@+id/buttonNum9"
                android:onClick="eventoBtn9"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton4"
                android:id="@+id/buttonNum4"
                android:onClick="eventoBtn4"
                android:layout_column="0" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton5"
                android:id="@+id/buttonNum5"
                android:onClick="eventoBtn5"
                android:layout_column="1" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton6"
                android:id="@+id/buttonNum6"
                android:onClick="eventoBtn6"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton1"
                android:id="@+id/buttonNum1"
                android:onClick="eventoBtn1"
                android:layout_column="0" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton2"
                android:id="@+id/buttonNum2"
                android:onClick="eventoBtn2"
                android:layout_column="1" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton3"
                android:id="@+id/buttonNum3"
                android:onClick="eventoBtn3"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButton0"
                android:id="@+id/buttonNum0"
                android:onClick="eventoBtn0"
                android:layout_column="0"
                android:layout_span="2" />

            <Button
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/txtButtonIgual"
                android:id="@+id/buttonIgual"
                android:onClick="eventoBtnIgu"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
